--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/AnthonyTrinh8/AnyTrak.git"
   },
   "author": "Anthony Trinh, Daniel Safarov",
-  "license": "ISC",
+  "license": "",
   "bugs": {
     "url": "https://github.com/AnthonyTrinh8/AnyTrak/issues"
   },
